- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
  Not Evaluated                     
     - 
    Qt Creator 12.0.0
 - 
    None
 
- 
        
 - 
        085949bba (12.0)
 
To reproduce: start switching between 2 sessions containing QtCreator project. At some point the following assert appears:
SOFT ASSERT [15:43:38.453]: "d->m_state == Initialized" in /home/jarek/dev/creator-12-work/src/plugins/languageclient/client.cpp:700
The m_state is already Client::ShutdownRequested at this point.
Call stack:
1 Utils::writeAssertLocation qtcassert.cpp 126 0x7ffff7a96be3 2 LanguageClient::Client::sendMessage client.cpp 700 0x7fff7e4ed088 3 ClangCodeModel::Internal::requestAst(LanguageClient::Client *, Utils::FilePath const&, LanguageServerProtocol::Range, std::function<void (ClangCodeModel::Internal::ClangdAstNode const&, LanguageServerProtocol::MessageId const&)> const&) clangdast.cpp 410 0x7fff7ce98517 4 ClangCodeModel::Internal::ClangdClient::Private::getAndHandleAst(std::variant<TextEditor::TextDocument const *, Utils::FilePath> const&, std::function<void (ClangCodeModel::Internal::ClangdAstNode const&, LanguageServerProtocol::MessageId const&)> const&, ClangCodeModel::Internal::ClangdClient::AstCallbackMode, LanguageServerProtocol::Range const&) clangdclient.cpp 1658 0x7fff7ceb8e9b 5 ClangCodeModel::Internal::ClangdClient::Private::handleSemanticTokens clangdclient.cpp 1589 0x7fff7ceb8135 6 operator() clangdclient.cpp 467 0x7fff7ceaabce 7 std::__invoke_impl<void, ClangCodeModel::Internal::ClangdClient::ClangdClient(ProjectExplorer::Project *, const Utils::FilePath&, const Utils::Id&)::<lambda(TextEditor::TextDocument *, const QList<LanguageClient::ExpandedSemanticToken>&, int, bool)>&, TextEditor::TextDocument *, const QList<LanguageClient::ExpandedSemanticToken>&, int, bool>(std::__invoke_other, struct {...} &) invoke.h 61 0x7fff7cebf9ec 8 std::__invoke_r<void, ClangCodeModel::Internal::ClangdClient::ClangdClient(ProjectExplorer::Project *, const Utils::FilePath&, const Utils::Id&)::<lambda(TextEditor::TextDocument *, const QList<LanguageClient::ExpandedSemanticToken>&, int, bool)>&, TextEditor::TextDocument *, const QList<LanguageClient::ExpandedSemanticToken>&, int, bool>(struct {...} &) invoke.h 111 0x7fff7cebdc1f 9 std::_Function_handler<void(TextEditor::TextDocument *, const QList<LanguageClient::ExpandedSemanticToken>&, int, bool), ClangCodeModel::Internal::ClangdClient::ClangdClient(ProjectExplorer::Project *, const Utils::FilePath&, const Utils::Id&)::<lambda(TextEditor::TextDocument *, const QList<LanguageClient::ExpandedSemanticToken>&, int, bool)>>::_M_invoke(const std::_Any_data &, TextEditor::TextDocument *&&, const QList<LanguageClient::ExpandedSemanticToken> &, int &&, bool &&) std_function.h 290 0x7fff7cebb438 10 std::function<void (TextEditor::TextDocument *, QList<LanguageClient::ExpandedSemanticToken> const&, int, bool)>::operator()(TextEditor::TextDocument *, QList<LanguageClient::ExpandedSemanticToken> const&, int, bool) const std_function.h 590 0x7fff7e6eaaa9 11 LanguageClient::SemanticTokenSupport::highlight semantichighlightsupport.cpp 454 0x7fff7e6e37b9 12 LanguageClient::SemanticTokenSupport::handleSemanticTokens semantichighlightsupport.cpp 340 0x7fff7e6e1c58 13 operator() semantichighlightsupport.cpp 79 0x7fff7e6df721 14 std::__invoke_impl<void, LanguageClient::SemanticTokenSupport::reloadSemanticTokensImpl(TextEditor::TextDocument *, int)::<lambda(const Response&)>&, LanguageServerProtocol::Response<LanguageServerProtocol::SemanticTokensResult, std::nullptr_t>>(std::__invoke_other, struct {...} &) invoke.h 61 0x7fff7e6e63f3 15 std::__invoke_r<void, LanguageClient::SemanticTokenSupport::reloadSemanticTokensImpl(TextEditor::TextDocument *, int)::<lambda(const Response&)>&, LanguageServerProtocol::Response<LanguageServerProtocol::SemanticTokensResult, std::nullptr_t>>(struct {...} &) invoke.h 111 0x7fff7e6e5fdd 16 std::_Function_handler<void(LanguageServerProtocol::Response<LanguageServerProtocol::SemanticTokensResult, std::nullptr_t>), LanguageClient::SemanticTokenSupport::reloadSemanticTokensImpl(TextEditor::TextDocument *, int)::<lambda(const Response&)>>::_M_invoke(const std::_Any_data &, LanguageServerProtocol::Response<LanguageServerProtocol::SemanticTokensResult, std::nullptr_t> &&) std_function.h 290 0x7fff7e6e4e22 17 std::function<void (LanguageServerProtocol::Response<LanguageServerProtocol::SemanticTokensResult, decltype(nullptr)>)>::operator()(LanguageServerProtocol::Response<LanguageServerProtocol::SemanticTokensResult, decltype(nullptr)>) const std_function.h 590 0x7fff7e6ff8ff 18 LanguageServerProtocol::Request<LanguageServerProtocol::SemanticTokensResult, decltype(nullptr), LanguageServerProtocol::SemanticTokensParams>::responseHandler() const::{lambda(LanguageServerProtocol::JsonRpcMessage const&)#1}::operator()(LanguageServerProtocol::JsonRpcMessage const&) const jsonrpcmessages.h 367 0x7fff7e6fedb1 19 std::__invoke_impl<void, LanguageServerProtocol::Request<LanguageServerProtocol::SemanticTokensResult, decltype(nullptr), LanguageServerProtocol::SemanticTokensParams>::responseHandler() const::{lambda(LanguageServerProtocol::JsonRpcMessage const&)#1}&, LanguageServerProtocol::JsonRpcMessage const&>(std::__invoke_other, LanguageServerProtocol::Request<LanguageServerProtocol::SemanticTokensResult, decltype(nullptr), LanguageServerProtocol::SemanticTokensParams>::responseHandler() const::{lambda(LanguageServerProtocol::JsonRpcMessage const&)#1}&, LanguageServerProtocol::JsonRpcMessage const&) invoke.h 61 0x7fff7e700767 20 std::__invoke_r<void, LanguageServerProtocol::Request<LanguageServerProtocol::SemanticTokensResult, decltype(nullptr), LanguageServerProtocol::SemanticTokensParams>::responseHandler() const::{lambda(LanguageServerProtocol::JsonRpcMessage const&)#1}&, LanguageServerProtocol::JsonRpcMessage const&>(LanguageServerProtocol::Request<LanguageServerProtocol::SemanticTokensResult, decltype(nullptr), LanguageServerProtocol::SemanticTokensParams>::responseHandler() const::{lambda(LanguageServerProtocol::JsonRpcMessage const&)#1}&, LanguageServerProtocol::JsonRpcMessage const&) invoke.h 111 0x7fff7e700458 21 std::_Function_handler<void (LanguageServerProtocol::JsonRpcMessage const&), LanguageServerProtocol::Request<LanguageServerProtocol::SemanticTokensResult, decltype(nullptr), LanguageServerProtocol::SemanticTokensParams>::responseHandler() const::{lambda(LanguageServerProtocol::JsonRpcMessage const&)#1}>::_M_invoke(std::_Any_data const&, LanguageServerProtocol::JsonRpcMessage const&) std_function.h 290 0x7fff7e6ffeba 22 std::function<void (LanguageServerProtocol::JsonRpcMessage const&)>::operator()(LanguageServerProtocol::JsonRpcMessage const&) const std_function.h 590 0x7fff7e51cf49 23 LanguageClient::ClientPrivate::handleResponse client.cpp 1860 0x7fff7e4f69ba 24 LanguageClient::Client::handleMessage client.cpp 1691 0x7fff7e4f5a1e 25 QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<LanguageServerProtocol::JsonRpcMessage const&>, void, void (LanguageClient::Client:: *)(LanguageServerProtocol::JsonRpcMessage const&)>::call qobjectdefs_impl.h 137 0x7fff7e54f3b5 26 QtPrivate::FunctionPointer<void (LanguageClient::Client:: *)(LanguageServerProtocol::JsonRpcMessage const&)>::call<QtPrivate::List<LanguageServerProtocol::JsonRpcMessage const&>, void> qobjectdefs_impl.h 174 0x7fff7e542e8a 27 QtPrivate::QSlotObject<void (LanguageClient::Client:: *)(LanguageServerProtocol::JsonRpcMessage const&), QtPrivate::List<LanguageServerProtocol::JsonRpcMessage const&>, void>::impl qobjectdefs_impl.h 432 0x7fff7e53665b 28 QtPrivate::QSlotObjectBase::call qobjectdefs_impl.h 374 0x7ffff4b9dc61 29 doActivate<false> qobject.cpp 4036 0x7ffff4c16762 30 QMetaObject::activate qobject.cpp 4096 0x7ffff4c0c707 31 LanguageClient::InterfaceController::messageReceived client.moc 218 0x7fff7e4fb610 32 QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<LanguageServerProtocol::JsonRpcMessage>, void, void (LanguageClient::InterfaceController:: *)(LanguageServerProtocol::JsonRpcMessage const&)>::call qobjectdefs_impl.h 137 0x7fff7e54e0f8 33 QtPrivate::FunctionPointer<void (LanguageClient::InterfaceController:: *)(LanguageServerProtocol::JsonRpcMessage const&)>::call<QtPrivate::List<LanguageServerProtocol::JsonRpcMessage>, void> qobjectdefs_impl.h 174 0x7fff7e541e73 34 QtPrivate::QSlotObject<void (LanguageClient::InterfaceController:: *)(LanguageServerProtocol::JsonRpcMessage const&), QtPrivate::List<LanguageServerProtocol::JsonRpcMessage>, void>::impl qobjectdefs_impl.h 432 0x7fff7e535aff 35 QtPrivate::QSlotObjectBase::call qobjectdefs_impl.h 374 0x7ffff4b9dc61 36 QMetaCallEvent::placeMetaCall qobject.cpp 650 0x7ffff4c034c5 37 QObject::event qobject.cpp 1438 0x7ffff4c048da 38 QApplicationPrivate::notify_helper qapplication.cpp 3290 0x7ffff69a9d96 39 QApplication::notify qapplication.cpp 3241 0x7ffff69a9b88 40 QCoreApplication::notifyInternal2 qcoreapplication.cpp 1119 0x7ffff4b7a407 41 QCoreApplication::sendEvent qcoreapplication.cpp 1537 0x7ffff4b7afa9 42 QCoreApplicationPrivate::sendPostedEvents qcoreapplication.cpp 1899 0x7ffff4b7bf00 43 QCoreApplication::sendPostedEvents qcoreapplication.cpp 1758 0x7ffff4b7b7ce 44 postEventSourceDispatch qeventdispatcher_glib.cpp 243 0x7ffff4fcdc4e 45 g_main_context_dispatch 0x7ffff451bd3b 46 ?? 0x7ffff4571258 47 g_main_context_iteration 0x7ffff45193e3 48 QEventDispatcherGlib::processEvents qeventdispatcher_glib.cpp 393 0x7ffff4fce510 49 QXcbGlibEventDispatcher::processEvents qxcbeventdispatcher.cpp 96 0x7ffff051d22a 50 QEventLoop::processEvents qeventloop.cpp 100 0x7ffff4b8e98f 51 QEventLoop::exec qeventloop.cpp 182 0x7ffff4b8ecfe 52 QCoreApplication::exec qcoreapplication.cpp 1440 0x7ffff4b7ad72 53 QGuiApplication::exec qguiapplication.cpp 1925 0x7ffff59e6146 54 QApplication::exec qapplication.cpp 2569 0x7ffff69a6d83 55 main main.cpp 831 0x555555565662
- relates to
 - 
                    
QTCREATORBUG-29748 Client: Slowing down client communication reveals a number of asserts
-         
     - Closed
 
 -         
 
| For Gerrit Dashboard: QTCREATORBUG-29747 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 511573,3 | LanguageClient: do not assert on sending messages to a dying client | 12.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |