LanguageClient: do not assert on sending messages to a dying client

Fixes: QTCREATORBUG-29747
Change-Id: I14067695425d74eaeaa255b370ebf4106c0ac591
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>